// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Utilities: Attribute renders 1`] = `
<code>
  <span
    className="token attr-name"
  >
    test
  </span>
  <span
    className="token attr-value"
  >
    <span
      className="token punctuation"
    >
      ="
    </span>
    testValue
    <span
      className="token punctuation"
    >
      "
    </span>
  </span>
</code>
`;

exports[`Utilities: Attribute renders data attribute 1`] = `
<code>
  <span
    className="token attr-name"
  >
    data-
  </span>
  <span
    className="token attr-name"
  >
    test
  </span>
  <span
    className="token attr-value"
  >
    <span
      className="token punctuation"
    >
      ="
    </span>
    test
    <span
      className="token punctuation"
    >
      "
    </span>
  </span>
</code>
`;
